[package]
name = "arkui"
version = "0.0.1"
edition = "2021"
description = "Rust bindings to ArkUI on OpenHarmony"
license = "Apache-2.0"
repository = "https://github.com/openharmony-rs/arkui-rs"
keywords = ["OpenHarmony", "HarmonyOS", "ArkUI", "UI"]
readme = "README.md"

[dependencies]
arkui-sys = "0.1.0"
